fixed cf and cftester